--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ server {
     }
 
     # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Content-Security-Policy "frame-ancestors http://localhost:9000" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 }
